src/snapshots/afrotd__parser__tests__interpretation_2.4.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 4
  - 3
index: 3
text: "Der in der Luft befindliche A3 erreicht einen Pass an der A-40.\nAls er den Ball erreicht, wird er von B1 berührt und kommt mit dem Ball\nan der A-37 im Seitenaus auf."
ruling: "Unvollständiger Pass (Regel\n7.3.7.a)."
