src/snapshots/afrotd__parser__tests__interpretation_2.4.3_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 4
  - 3
index: 4
text: "Receiver A88 befindet sich in der Nähe der Seitenlinie und streckt\nsich, um einen legalen Vorwärtspass zu erreichen. Als A88 springt, um\nden Pass zu fangen, (a) erlangt er sichere Kontrolle über den Ball, während sich seine Zehen inbounds befinden und er anschließend im Aus\nzu Boden fällt, wobei er die sichere Kontrolle behält. (b) A88 erlangt\nsichere Kontrolle über den Ball während er sich mit seinen Zehen inbounds befindet, jongliert mit dem Ball als er in der Luft ist, erlangt\nwieder sichere Kontrolle bevor er im Aus landet und behält die Kontrolle\nbei der Landung. (c) A88 erlangt sichere Kontrolle über den Ball mit seinen Zehen inbounds, verliert aber die sichere Kontrolle, als er auf den\nBoden prallt."
ruling: "(a) Fangen ist vollständig. (b) Unvollständiger\nVorwärtspass. (c) Unvollständiger Vorwärtspass."
