src/snapshots/afrotd__parser__tests__interpretation_2.8.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 8
  - 3
index: 2
text: "Free Kick von der A-35. Der Kickoff ist hoch und tief. Kickreturner\nB21 gibt, an der eigenen Goalline stehend, ein „T –Signal“. B21 fängt\nden Kick direkt an der Goalline und advanct bis zur B-35."
ruling: "Das „T –Signal“ gilt als ungültiges Fair Catch Signal und der Ball wird\ndead, wenn der Kick gefangen wurde. Die Schiedsrichter müssen den\nDown beenden, nachdem B21 in Ballbesitz ist. Team B’s Ball, 1. und 10\nvon der B-25."
