src/snapshots/afrotd__parser__tests__interpretation_3.1.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 1
text: "Während eines Spieles, der kein Try ist, erzielt Team B einen\nTouchdown, nachdem ein Vorwärtspass abgefangen oder ein Fumble\noder ein Rückpass abgefangen oder recovert oder ein geblockter Fieldgoalversuch recovert wurde."
ruling: "Extraperiode und Spiel sind\nbeendet und Team B ist der Gewinner."
