src/snapshots/afrotd__parser__tests__interpretation_3.1.3_10.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 10
text: "Während der ersten Ballbesitz-Serie in einer Extraperiode erzielt Team A einen Touchdown. Beim Try fängt Team B einen Pass ab\nund advanct zu einem Zwei-Punkte-Touchdown."
ruling: "Team B beginnt seine Ballbesitz-Serie an der 25-Meterlinie, wobei Team A in der\nNachspielzeit mit 6:2 in Führung ist."
