src/snapshots/afrotd__parser__tests__interpretation_3.1.3_11.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 11
text: Nach dem Ende der ersten Ballbesitz-Serie durch Team A verursacht Team B ein Dead Ball Foul.
ruling: "Team B startet seine\nSerie an der 40-Meterlinie, First Down und 10."
