src/snapshots/afrotd__parser__tests__interpretation_3.1.3_12.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 12
text: "Während der ersten Serie in einer Extraperiode wirft A12 einen\nVorwärtspass und Team A verursacht einen illegalen Shift. B25 fängt\nden Pass ab und B38 (a) clippt oder (b) verursacht ein schweres persönliches Foul, bevor B25 Team A’s Goalline überquert."
ruling: "Die\nPunkte zählen nicht. Die Fouls heben sich auf und der Down wird nicht\nwiederholt. Team A’s Ballbesitz-Serie ist beendet und (a) Team B beginnt seine Ballbesitz-Serie an der 25-Meterlinie. (b) B38 wird disqualifiziert und Team B beginnt seine Ballbesitz-Serie an der 40-Meterlinie."
