src/snapshots/afrotd__parser__tests__interpretation_3.1.3_13.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 13
text: "Während der zweiten Ballbesitz-Serie in einer Extraperiode\nfängt B25 einen Pass ab und advanct über Team A’s Goalline. Während\ndes Laufes clippt B79 in der Spielfeldmitte."
ruling: "Kein Touchdown.\nEntweder ist das Spiel vorüber oder die nächste Extraperiode beginnt\nmit einem First Down und 10 an der entsprechenden 25-Meterlinie, da\ndie Strafe nicht übertragen wird."
