src/snapshots/afrotd__parser__tests__interpretation_3.1.3_14.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 14
text: "Während der ersten Ballbesitz-Serie fängt B37 einen Pass ab\nund hat freien Weg zur Goalline, als er obszöne Gesten in Richtung\ndes nächsten, ihn verfolgenden Gegners macht."
ruling: "Team B’s\nPunkte werden annulliert und die Strafe wird übertragen. Team B startet\nseine Serie an der 40-Meterlinie, First Down und 10 (Regeln 3.1.3 und\n3.1.3.g.1 und 3.1.3.g.2)."
