src/snapshots/afrotd__parser__tests__interpretation_3.1.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 2
text: "Während der ersten Ballbesitz-Serie einer Extraperiode fängt\nTeam B einen Pass ab oder recovert oder fängt einen Fumble oder\neinen Rückpass ab und erzielt keinen Touchdown."
ruling: "Team A’s\nBallbesitz-Serie ist beendet und Team B beginnt seine Ballbesitz-Serie.\nTeam B wird zu Team A, wenn der Referee den Ball für spielbereit erklärt."
